# pysyscall_intercept

./: .gitmodules  CMakeLists.txt  LICENSE  PKG-INFO  README.md  requirements.txt  setup.py
.circleci/: config.yml
sources/: CMakeLists.txt  setup.py
sources/package/pysyscall_intercept/: __init__.py  _interceptor.cpp  _interceptor.hpp  interceptor.py
sources/pysyscall_intercept/: _interceptor.cpp  _interceptor.hpp  _interceptor.ipp  interceptor.py  interceptor.pyi
tests/: CMakeLists.txt
tests/package/pysyscall_intercept/: interceptor_test.py
tests/pysyscall_intercept/: interceptor_test.py
